# BopAudio

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  gem.json
Assets/: bop_document_schema.json
Assets/ScriptCanvas/BopAudio/: GenericAudioEvent.scriptcanvas
Assets/TranslationAssets/: AudioControl_C50C6B3A-D399-C262-CB6E-C26205FE6B72.names
Code/: CMakeLists.txt  bopaudio_api_files.cmake  bopaudio_autogen_files.cmake  bopaudio_editor_private_files.cmake  bopaudio_editor_shared_files.cmake  bopaudio_editor_tests_files.cmake  bopaudio_private_files.cmake  bopaudio_scene_files.cmake  bopaudio_scene_shared_files.cmake  bopaudio_shared_files.cmake  bopaudio_tests_files.cmake  steamaudio_api_files.cmake  steamaudio_editor_private_files.cmake  steamaudio_editor_shared_files.cmake  steamaudio_editor_tests_files.cmake  steamaudio_private_files.cmake  steamaudio_shared_files.cmake  steamaudio_tests_files.cmake
Code/Include/BopAudio/: AudioAsset.h  BopAudioBus.h  BopAudioComponentBus.h  BopAudioTypeIds.h  Logging.h  ReflectionAttributes.h  Util.h
Code/Include/SteamAudio/: SoundAsset.h  SteamAudioBus.h  SteamAudioComponentBus.h  SteamAudioTypeIds.h
Code/Platform/Android/: bopaudio_private_files.cmake  steamaudio_private_files.cmake
Code/Platform/Linux/: PAL_linux.cmake  bopaudio_shared_files.cmake  steamaudio_private_files.cmake
Code/Platform/Mac/: PAL_mac.cmake  (+2 more)
Code/Source/: BopAudioModuleInterface.cpp  BopAudioModuleInterface.h  SteamAudioModuleInterface.cpp  SteamAudioModuleInterface.h
Code/Source/ScriptCanvasNodes/: CMakeLists.txt  ScriptCanvasNodes_files.cmake
Code/Source/ScriptCanvasNodes/Include/: AudioEventNode.h
Code/Source/ScriptCanvasNodes/Source/: AudioEventNode.ScriptCanvasNodeable.xml  AudioEventNode.cpp
Registry/: assetprocessor_settings.setreg
(+156 files in other folders)
